fix: Overlapping UI - blog tags

--- a/antora-ui-camel/src/css/blog.css
+++ b/antora-ui-camel/src/css/blog.css
@@ -24,9 +24,9 @@
   list-style: none;
   padding: 0;
   margin-top: 1rem;
-  max-height: 990px;
+  display: inline-block;    
   overflow-y: auto;
-  display: inline-block;
+  max-height: 740px;
 }
 
 article.blog:first-child {
